# tiny-optimizing-compiler

./: .EBNF  .gitmodules  CMakeLists.txt  ebnf  todo
.github/workflows/: test-compiler.yml
include/: BasicBlock.h  DOTGraph.h  FileReader.h  IRBuilder.h  Instruction.h  Lexer.h  Parser.h  Token.h
include/AST/: ASTNode.h  Assignment.h  Computation.h  Expression.h  FuncCall.h  StatSequence.h  Statement.h
include/graph/: DOTGraph.h
include/lexing/: Lexer.h  Tiny.h  Token.h
include/parsing/: Parser.h
include/parsing/AST/: ASTMaster.h  ASTNode.h  Assignment.h  Declarations.h  Expression.h  Expressions.h  FuncCall.h  StatSequence.h  Statements.h
include/synthesis/: BasicBlock.h  IRBuilder.h  Instruction.h
samples/: basicif.tiny  basicloop.tiny  basicmath.tiny  copyproploop.tiny  cse1.tiny  example1.tiny  example2-edited.tiny  example2.tiny  median.tiny  nestedif.tiny  nestedif2.tiny  simple1.tiny  triplewhile.tiny
src/: DOTGraph.cpp  IRBuilder.cpp  ParseExpressions.cpp  ParseStatements.cpp  Parser.cpp  main.cpp
src/graph/: DOTGraph.cpp
src/lexing/: Lexer.cpp
src/parsing/: ParseExpressions.cpp  ParseStatements.cpp  Parser.cpp
src/synthesis/: Declarations.cpp  Expressions.cpp  IRBuilder.cpp  IfStatement.cpp  Statements.cpp  WhileStatement.cpp
